#22 add goals
